# raylib-scopa

./: BUILD.gn  README.md  build.sh
assets/: config.ini
assets/fnt/: LICENSE
src/: card.c  card.h  config.c  config.h  deck.c  deck.h  graphics.c  graphics.h  main.c  random.c  random.h  ui.c  ui.h  util.c  util.h
toolchain/: BUILD.gn
