executable("game") {
  sources = [ 
    "src/main.c",
    "src/graphics.c",
    "src/deck.c",
    "src/random.c",
    "src/card.c"
  ]

  deps = [ 
    "//extern/raylib-5.5_linux_amd64:raylib"
  ]
  
  configs = [ "//build:warnings" ]
  if (is_debug) {
    configs += [ "//build:debug_cflags" ]
  } else {
    configs += [ "//build:release_cflags" ]
  }
}