executable("game") {
  sources = [ 
    "src/main.c",
    "src/graphics.c",
    "src/deck.c",
    "src/random.c",
    "src/card.c",
    "src/ui.c",
    "src/util.c",
    "src/config.c"
  ]

  deps = [ 
    "//extern/raylib-5.5_linux_amd64:raylib",
    "//extern/minIni-1.5_src:minini"
  ]
  
  configs = [ "//build:warnings" ]
  if (is_debug) {
    configs += [ "//build:debug_cflags" ]
  } else {
    configs += [ "//build:release_cflags" ]
  }
}